# japanese-learner

./: .gitignore  index.html  package.json
src/: App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: convert_kanjidic2_json_to_csv.cjs  logs.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/conversion/: mod.rs
src-tauri/src/data/: heisig_kanji.json  heisig_kanji.rs  kanjidic2.rs  mod.rs
src-tauri/src/kanji/: commands.rs  mod.rs  parser.rs
src-tauri/src/knowledge_base/: entity.rs  kanjis.rs  mod.rs  words.rs
src-tauri/src/translation/: mod.rs
src-tauri/src/word/: mod.rs
src/components/: AnnotatedText.tsx  Autocomplete.tsx  Dialog.tsx  KanjiAdder.tsx  KanjiSelector.tsx  Kanjis.tsx  ParsedWords.tsx  Tabs.tsx  WordAdder.tsx  WordCard.tsx  Words.tsx
src/queries/: index.ts
